CHANGELOG - 0 Point for Drupal 7

0 Point (Jan 18, 2013)
----------------------
  Bug fixes:
    o #1853910: Construct page title

0 Point (Nov 28, 2012)
----------------------
  Security update:
    o #1830812: Cross site scripting through URLS in Zero Point theme

0 Point (Sep 22, 2012)
----------------------
  Bug fixes:
    Some images not showing right in RTL languages.

0 Point (Jul 29, 2012)
----------------------
  Bug fixes:
    o #1126168: Using <li> for breadcrumbs.
    o #1051786: The numbers in ordered lists render outside of basic page.
    o #1420478: Advanced forums icons not displaying correctly.
    o #1179176: "Undefined variable: admin_links" in views. 
    o #1347088: Subtheming not possible.
    o #1620678: ZeroPoint new color style. Thanks to mindfree (http://drupal.org/user/1877354).
    o #1635390: Dropdown menus partially hidden behind second row of main menu (IE8, Chrome, & FF).

  Other changes:
    o Added rel="nofollow" to ZeroPoint login/register links.
