@@ -95,7 +95,7 @@
   $form['tnt_container']['layout_settings']['roundcorners'] = array(
     '#type' => 'checkbox',
     '#title' => t('Rounded corners'),
-    '#description' => t('Some page elements (comments, search, blocks) and primary menu will have rounded corners in all browsers but IE. <br /> NOTE: With this option enabled 0 Point will not validate CSS2.'),
+    '#description' => t('Some page elements (comments, search, blocks) and primary menu will have rounded corners in all browsers but IE6,7. <br /> NOTE: With this option enabled 0 Point will not validate CSS2/CSS3.'),
     '#default_value' => theme_get_setting('roundcorners'),
   );
 
